--- a/package.json
+++ b/package.json
@@ -9,26 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.0.6",
-    "next": "15.1.6",
-    "next-themes": "^0.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hot-toast": "^2.4.1",
-    "swiper": "^9.3.2"
+    "framer-motion": "^12.16.0",
+    "next": "15.3.3",
+    "next-themes": "^0.4.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/bcrypt": "^5.0.1",
-    "@types/node": "^20.8.9",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.3",
-    "typescript": "^5.2.2"
-  }
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^24.0.0",
+    "@types/react": "19.1.7",
+    "@types/react-dom": "19.1.6",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "15.3.3",
+    "postcss": "^8.5.4",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.8",
+    "typescript": "^5.8.3"
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide",
+    "sharp"
+  ]
 }
