--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sonar:check": "node quick-analysis.js",
+    "sonar:advanced": "node sonar-advanced.js",
+    "sonar:real": "node sonar-real.js",
+    "sonar:local": "node sonar-local.js",
+    "sonar:report": "node sonar-report.js",
+    "sonar:verify": "node sonar-verify.js",
+    "sonar:clean": "node cleanup.js"
   },
   "dependencies": {
     "framer-motion": "^12.16.0",
@@ -23,11 +30,18 @@
     "@types/node": "^24.0.0",
     "@types/react": "19.1.7",
     "@types/react-dom": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.3",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
+    "sonarqube-scanner": "^4.3.0",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3"
   },
