--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,6 +24,8 @@
 sonar.projectKey=corbaz_solid-nextjs-main
 sonar.organization=corbaz
 
+# Exclusiones para evitar problemas con Tailwind CSS
+sonar.exclusions=node_modules/**,reports/**,.next/**,out/**,coverage/**,*.config.js,*.config.ts,public/**,**/*.d.ts,app/globals.css
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=solid-nextjs-main
