--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectVersion=1.3.1
 
 # Source code
 sonar.sources=app,components,types
-sonar.exclusions=**/node_modules/**,**/build/**,**/dist/**,**/*.test.ts,**/*.test.tsx,**/coverage/**,**/reports/**
+sonar.exclusions=**/node_modules/**,**/build/**,**/dist/**,**/*.test.ts,**/*.test.tsx,**/coverage/**,**/reports/**,**/globals.css
 
 # Language settings
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
